--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,11 @@ img {
 .header-contacts {
   display: flex;
   margin-left: auto;
+  align-items: center;
+}
+.header-icon {
+  margin-right: 10px;
+  fill: currentColor;
 }
 .header-mail {
   margin-right: 50px;
@@ -126,6 +131,11 @@ img {
   background-color: var(--hero-background-color);
   padding: 200px 0;
   text-align: center;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../image/hero.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1600px;
 }
 .hero-title {
   color: var(--hero-title-color);
@@ -165,6 +175,16 @@ img {
 }
 .qualities-list {
   display: flex;
+}
+.qualities-box-icon {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  margin-bottom: 30px;
+  display: flex;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
 }
 .qualities-items {
   margin-right: 30px;
@@ -256,12 +276,112 @@ img {
   letter-spacing: 0.03em;
   line-height: 1.19;
 }
+.team-social-item {
+  margin-top: 16px;
+}
+.team-social:hover,
+.team-social:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+}
+.team-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.team-social {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  color: #afb1b8;
+}
+.team-icon {
+  fill: currentColor;
+}
+.team-social-list {
+  display: flex;
+  justify-content: center;
+}
+.client {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+.client .conteiner {
+  text-align: center;
+}
+.client-list {
+  display: flex;
+}
+.client-title {
+  font-weight: 700;
+  font-size: 36px;
+  margin-bottom: 50px;
+}
+.client-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  color: #afb1b8;
+}
+.client-link:hover,
+.client-link:focus {
+  border: 1px solid #2196f3;
+  color: #2196f3;
+}
+.client-item:not(:last-child) {
+  margin-right: 30px;
+}
+.client-icon {
+  fill: currentColor;
+}
 .footer {
   background-color: #2f303a;
 }
 .footer {
   padding-top: 60px;
   padding-bottom: 57px;
+}
+.footer .conteiner {
+  display: flex;
+}
+.footer-text {
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+.footer-social {
+  padding-left: 70px;
+}
+.footer-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+}
+.footer-social-link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  background-color: #ffffff1a;
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #2196f3;
+}
+.footer-social-icon {
+  fill: currentColor;
 }
 .footer-logo {
   display: inline-block;
@@ -358,6 +478,11 @@ img {
   box-sizing: border-box;
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.portfolio-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
 .portfolio-item:nth-child(3n + 3) {
   margin-right: 0;
