--- a/css/styles.css
+++ b/css/styles.css
@@ -278,9 +278,9 @@ img {
   color: var(--text-color);
   letter-spacing: 0.03em;
   line-height: 1.19;
+  margin-bottom: 16px;
 }
 .team-social-item {
-  margin-top: 16px;
   width: 44px;
   height: 44px;
 }
