--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,9 @@ img {
     url(../image/hero.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
+  background-size: cover;
+  width: 1600px;
+  margin: 0 auto;
 }
 .hero-title {
   color: var(--hero-title-color);
